# minGPT-jax

./: pyproject.toml  test.py
mingpt/: utils.py
